# yumi_egm_driver

./: README.md
yumi/yumi_control/config/: gripper_controllers.yaml  position_controllers.yaml  traj_controllers.yaml  velocity_controllers.yaml
yumi/yumi_description/: yumi.rviz
yumi/yumi_description/urdf/: frames.gv  yumi.transmission.xacro  yumi.urdf  yumi.urdf.xacro  yumi.xacro
yumi/yumi_description/urdf/Gazebo/: gazebo.urdf.xacro
yumi/yumi_description/urdf/Grippers/: yumi_servo_gripper.transmission.xacro
yumi/yumi_launch/: package.xml
yumi/yumi_launch/launch/: yumi_gazebo_pos_control.launch  yumi_gazebo_traj_pos_control.launch  yumi_gazebo_traj_vel_control.launch  yumi_gazebo_vel_control.launch  yumi_pos_control.launch  yumi_traj_pos_control.launch
yumi/yumi_motion_api/: CMakeLists.txt  package.xml  setup.py
yumi/yumi_motion_api/nodes/: utils.py  yumi_motion_api_node.py  yumi_pick_place_node.py
yumi/yumi_motion_api/scripts/: init_once.py  servcall.py  utils.py
yumi/yumi_motion_api/srv/: YuMiJointsCmd.srv  YuMiPickPlace.srv  YuMiPoseCmd.srv
yumi/yumi_moveit_config/: .setup_assistant  package.xml
yumi/yumi_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  yumi.srdf
yumi/yumi_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  ros_controllers.launch  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  yumi_moveit_controller_manager.launch.xml
yumi/yumi_rapid_interface/: CMakeLists.txt  package.xml  setup.py
yumi/yumi_rapid_interface/nodes/: yumi_pp_client.py
yumi/yumi_rapid_interface/scripts/: pick_place_runner.py  points.csv
